// ProtoBestPractices: ignore
/**
 * NOTE: DO NOT USE PROTOBUFS FROM THIS FILE.
 *
 * This file contains definitions of deleted protos. They have to be preserved
 * so that newer versions of API client library can safely work with older
 * server releases.
 */
syntax = "proto2";

import "grr_response_proto/output_plugin.proto";
import "grr_response_proto/semantic.proto";


message CollectArtifactDependenciesArgs {
  repeated string artifact_list = 1 [(sem_type) = {
      description: "A list of Artifact names to collect dependencies for.",
      type: "ArtifactName",
    }];
}

message ApiNotificationDiscoveryReference {
  optional string client_id = 1 [(sem_type) = {
      type: "ApiClientId",
      description: "The client this notification is about."
    }];
}


message ApiNotificationFileDownloadReference {
  optional string path = 1 [(sem_type) = {
      type: "RDFURN",
      description: "The download path for the file."
    }];
}


message ApiListCronJobFlowsArgs {
  optional string cron_job_id = 1 [(sem_type) = {
      type: "ApiCronJobId",
      description: "Cron job id."
    }];
  optional int64 offset = 2 [(sem_type) = {
      description: "Starting offset."
    }];
  optional int64 count = 3 [(sem_type) = {
      description: "Max number of flows to fetch."
    }];
};

message ApiGetCronJobFlowArgs {
  optional string cron_job_id = 1 [(sem_type) = {
      type: "ApiCronJobId",
      description: "Cron job id."
    }];
  optional string flow_id = 2 [(sem_type) = {
      type: "ApiFlowId",
      description: "Flow id."
    }];
}

message GlobalNotification {
  enum Type {
    INFO = 0;
    WARNING = 1;
    ERROR = 2;
  }
  optional Type type = 1;

  optional string header = 2;
  optional string content = 3;
  optional string link = 4;

  optional uint64 show_from = 5 [(sem_type) = {
    type: "RDFDatetime",
    description: "Notification will be shown after this time."
  }];
  optional uint64 duration = 6 [(sem_type) = {
    type: "Duration",
    description: "Duration of this notification."
  }];
}

message GlobalNotificationSet {
  repeated GlobalNotification notifications = 1;
}

message ApiListPendingGlobalNotificationsResult {
  repeated GlobalNotification items = 1 [
    (sem_type) = { description: "The list of pending global notifications." }
  ];
}

message ApiDeletePendingGlobalNotificationArgs {
  optional GlobalNotification.Type type = 1 [(sem_type) = {
    description: "The type of the global notification to delete."
  }];
}

message OutputPluginVerificationResult {
  optional string plugin_id = 1 [(sem_type) = {
      description: "String identifying the output plugin being checked."
    }];
  optional OutputPluginDescriptor plugin_descriptor = 2 [(sem_type) = {
      description: "Descriptor of the plugin that's being checked."
    }];

  enum Status {
    N_A = 0;
    SUCCESS = 1;
    WARNING = 2;
    FAILURE = 3;
  };
  optional Status status = 3;
  optional string status_message = 4;

  optional uint64 timestamp = 5 [(sem_type) = {
      type: "RDFDatetime",
      description: "Timestamp of the check."
    }];
}

message OutputPluginVerificationResultsList {
  repeated OutputPluginVerificationResult results = 1;
}
